--- a/src/navigation_demos/config/bt_nav.yaml
+++ b/src/navigation_demos/config/bt_nav.yaml
@@ -6,15 +6,12 @@ bt_navigator:
     odom_topic: odom
     bt_loop_duration: 10
     default_server_timeout: 20
-    # 'default_nav_through_poses_bt_xml' and 'default_nav_to_pose_bt_xml' use defaults:
-    # nav2_bt_navigator/navigate_to_pose_w_replanning_and_recovery.xml
-    # nav2_bt_navigator/navigate_through_poses_w_replanning_and_recovery.xml
-    # They can be set here or via a RewrittenYaml remap from a parent launch file to Nav2.
-    default_bt_xml_filename: "behavior_tree/bt_example_0.xml"
-
+    # CHANGE ME - behavior tree file
+    default_bt_xml_filename: "behavior_tree/bt_simple.xml"
 
 behavior_server:
   ros__parameters:
+    # Behavior tree node parameters
     costmap_topic: local_costmap/costmap_raw
     footprint_topic: local_costmap/published_footprint
     cycle_frequency: 10.0
