--- a/src/navigation_demos/config/controller.yaml
+++ b/src/navigation_demos/config/controller.yaml
@@ -11,17 +11,20 @@ controller_server:
     goal_checker_plugin: "goal_checker"
     controller_plugins: [ "FollowPath" ] # This is where we define the DWB controller plugin
 
+    # Progress checker plugin
     progress_checker:
       plugin: "nav2_controller::SimpleProgressChecker"
       required_movement_radius: 0.5
       movement_time_allowance: 10.0
 
+    # Goal checker plugin
     goal_checker:
       plugin: "nav2_controller::SimpleGoalChecker"
       xy_goal_tolerance: 0.25
       yaw_goal_tolerance: 0.25
       stateful: True
 
+    # DWB controller plugin
     FollowPath:
       plugin: "dwb_core::DWBLocalPlanner"
       debug_trajectory_details: True
@@ -62,6 +65,7 @@ controller_server:
       RotateToGoal.slowing_factor: 5.0
       RotateToGoal.lookahead_time: -1.0
 
+# Local costmap parameters
 local_costmap:
   local_costmap:
     ros__parameters:
@@ -78,6 +82,7 @@ local_costmap:
       plugins: [ "obstacle_layer", "inflation_layer" ]
       always_send_full_costmap: True
 
+      # Layer parameters
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 4.0
